[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Silkscreen-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ConfirmPurchaseWindow.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="ConfirmPurchaseWindow" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 16.0
margin_top = 488.0
margin_right = 516.0
margin_bottom = 688.0
rect_min_size = Vector2( 500, 200 )
rect_pivot_offset = Vector2( 250, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RailroadNameLabel" type="Label" parent="Panel/VBoxContainer"]
margin_right = 500.0
margin_bottom = 30.0
rect_min_size = Vector2( 500, 30 )
align = 1
valign = 1

[node name="PriceLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 34.0
margin_right = 500.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="ConfirmLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 52.0
margin_right = 500.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 50 )
rect_pivot_offset = Vector2( 200, 25 )
custom_fonts/font = SubResource( 1 )
text = "Confirm Purchase?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 106.0
margin_right = 500.0
margin_bottom = 138.0
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 221.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
text = "Confirm"

[node name="CenterMargin" type="MarginContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 275.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )

[node name="RejectButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 279.0
margin_right = 343.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
text = "Back"

[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer/RejectButton" to="." method="_on_RejectButton_button_down"]
